package com.dungeondevs.configs.Level;

public class DoorConfig {
    private int id;
    private int idSalleDestination;
    private int idPorteDestination;
    private SpawnPointConfig spawnPoint;
}
