package com.dungeondevs.configs.Level;

public enum EntityType {
    MONSTER,
    TRAP,
    POWERUP,
    WEAPON

}
