package com.dungeondevs.configs.Level;

import java.util.List;

public class RoomConfig {
    private int id;
    private String fichierTMX;
    private List<DoorConfig> doors;
    private List<StairConfig> escaliers;
    private List<SpawnPointConfig> spawnPoints;

}
