package com.dungeondevs.configs.Level;

import com.dungeondevs.configs.spawnable.SpawnableConfig;

public class SpawnPointConfig {
    private int id;
    private float intervalBetweenSpawns;
    private int nbEntitySpawned;
    private int nbMaxEntitySpawn;
    private boolean uniqueSpawn;
    protected SpawnableConfig entityQuilDoitFaireSpawn;
}
