package com.dungeondevs.configs.Level;

public class StairConfig {
    private String niveauDestinationFile;
}
