package com.dungeondevs.configs.spawnable.Items;

import com.badlogic.gdx.graphics.g2d.TextureRegion;
import com.badlogic.gdx.physics.box2d.BodyDef;

public class ItemConfig {
    protected BodyDef bodyDef;
    protected TextureRegion texture;
    protected boolean oneTimeUse;

}
